[gd_scene load_steps=12 format=3 uid="uid://f1xihl0ejq3y"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_57mxs"]
[ext_resource type="Script" path="res://custom_nodes/smooth_progress.gd" id="2_4yd6s"]
[ext_resource type="Texture2D" uid="uid://cu0ucauufyfpt" path="res://sprite/hud.png" id="2_5mkdd"]
[ext_resource type="Texture2D" uid="uid://byeuclomp04vn" path="res://sprite/collectible/coin.png" id="2_vg7k4"]
[ext_resource type="PackedScene" uid="uid://j2h0mycvgt31" path="res://ui/input_label.tscn" id="5_q6nph"]

[sub_resource type="Gradient" id="Gradient_rh1e5"]
colors = PackedColorArray(0.63, 0.63, 0.63, 0.705882, 1, 1, 1, 0.705882)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lf1oc"]
gradient = SubResource("Gradient_rh1e5")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j3y8i"]
texture = SubResource("GradientTexture2D_lf1oc")

[sub_resource type="AtlasTexture" id="AtlasTexture_571hl"]
atlas = ExtResource("2_vg7k4")
region = Rect2(21, 19, 6, 8)

[sub_resource type="Gradient" id="Gradient_nrktj"]
offsets = PackedFloat32Array(0.890411, 1)
colors = PackedColorArray(1, 0, 0, 0, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ad77b"]
gradient = SubResource("Gradient_nrktj")
width = 480
height = 270
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_57mxs")

[node name="Polygon2D" type="Polygon2D" parent="."]
clip_children = 1
polygon = PackedVector2Array(1274, 1051, 1903, 930, 1903, 1050)

[node name="HpBar" type="ProgressBar" parent="Polygon2D"]
unique_name_in_owner = true
modulate = Color(0.8, 0.2, 0.0941176, 1)
clip_contents = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 1276.0
offset_top = 929.0
offset_right = 1902.0
offset_bottom = 1059.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxTexture_j3y8i")
value = 50.0
show_percentage = false
script = ExtResource("2_4yd6s")

[node name="XpBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
modulate = Color(0.223529, 0.603922, 0.796078, 1)
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -639.0
offset_top = -45.0
offset_right = -255.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxTexture_j3y8i")
value = 50.0
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5mkdd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 772.0
offset_top = 857.0
offset_right = 957.0
offset_bottom = 927.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
texture = SubResource("AtlasTexture_571hl")
expand_mode = 1
stretch_mode = 5

[node name="Coins" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.901961, 0.654902, 0.380392, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
text = "12345"

[node name="HurtBorder" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ad77b")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 856.0
offset_top = 978.0
offset_right = 931.0
offset_bottom = 1012.0
text = "Attack"

[node name="Level" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 317.0
offset_top = 995.0
offset_right = 711.0
offset_bottom = 1029.0
text = "Level 1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 915.0
offset_top = 1021.0
offset_right = 990.0
offset_bottom = 1055.0
text = "Jump"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 1128.0
offset_top = 977.0
offset_right = 1203.0
offset_bottom = 1011.0
text = "Dash"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 1183.0
offset_top = 1021.0
offset_right = 1258.0
offset_bottom = 1055.0
text = "Menu"

[node name="InputLabel" parent="." instance=ExtResource("5_q6nph")]
layout_mode = 0
offset_left = 774.0
offset_top = 973.0
offset_right = 860.0
offset_bottom = 1007.0
action = "attack"

[node name="InputLabel2" parent="." instance=ExtResource("5_q6nph")]
layout_mode = 0
offset_left = 816.0
offset_top = 1020.0
offset_right = 902.0
offset_bottom = 1054.0

[node name="InputLabel3" parent="." instance=ExtResource("5_q6nph")]
layout_mode = 0
offset_left = 1031.0
offset_top = 976.0
offset_right = 1117.0
offset_bottom = 1010.0
action = "dash"

[node name="InputLabel4" parent="." instance=ExtResource("5_q6nph")]
layout_mode = 0
offset_left = 1087.0
offset_top = 1022.0
offset_right = 1173.0
offset_bottom = 1056.0
action = "interact"
